--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
+<!doctype html>
 <html>
 <head>
-	<title>CSS Practice</title>
+	<title>Thirty CSS Examples</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<div class="wrapper">
-		<div class="example">
-
-			<div class="chart small">
-			</div>
-			<div class="chart large">
-			</div>
-			<div class="chart medium">
+<div class="wrapper">
+	<div class="container">
+		<h1>HELLO!!!</h1>
+		<div class="book">
+			weee
+			<div class="example1-button">
+				Press Me
 			</div>
 		</div>
-		<div class="button">
-			Press Me
+		<div class="book">
+			<div class="example2-growing">
+				Press Me
+			</div>
 		</div>
-
-		<!-- <div class="example2"></div> -->
 	</div>
+
+</div>
 </body>
 </html>
