--- a/index.html
+++ b/index.html
@@ -3,28 +3,64 @@
 <head>
 	<title>Thirty CSS Examples</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="body.css">
 </head>
 <body>
 <div class="wrapper">
 	<div class="container">
 		<h1>HELLO!!!</h1>
-		<div class="book">
-			<div class="overlay"></div>
-			weee
+
+		<!--  -->
+		<!--  -->
+		<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<p>weee</p>
 			<div class="example1-button">
 				Press Me
 			</div>
 		</div>
+
+		<!--  -->
+		<!--  -->
+		<!--  -->
+
+		<div class="book">
+			<p>Helping me understand whats going on, <br> pasted code and destroyed it, for science.</p>
+				<!-- <img src="http://s.cdpn.io/79/sprite-steps.png" /> -->
+				<div class="example2-sprite"></div>
+			<p>Sauce: <a href="http://jsfiddle.net/simurai/CGmCe/light/" target="_blank">http://jsfiddle.net/simurai/CGmCe/light/</a></p>
+		</div>
+
+
+		<!--  -->
+		<!--  -->
+		<!--  -->
+
 		<div class="book">
 			<div class="example2-growing">
-				Press Me
+				test
 			</div>
 		</div>
+
+		<!--  -->
+		<!--  -->
+		<!--  -->
+
+
+
+	<!--  -->
+	<!--  -->
+	</div>
 	</div>
 
 </div>
 </body>
 </html>
+
+
+
+
 
 <!-- GTA 5 Pretty -->
 <!--  http://codepen.io/beyondSimple/pen/sDibB --> 
