updated example2, added a description

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 		<!--  -->
 
 		<div class="book">
-			<p>Helping me understand whats going on, <br> pasted code and destroyed it, for science.</p>
-				<!-- <img src="http://s.cdpn.io/79/sprite-steps.png" /> -->
+			<p>I did this to help me understand whats going on with keyframe animations.  This image is 2000px wide and has ten different "frames" of the animation repeated all the way across.  The code takes ten "steps" down the image, doing the math for me, literally shifting the image position in the background.  So, "play .8s steps(10) infinite"... if you were to change the number of steps to "steps(11)" (like is shown in the animation below) then the animation would change.  There are only ten frames on a fixed dimension image, so telling the computer that there are 11 frams then divides the pasted code into eleven parts and essentially renders the animation worthless.  I copy and pasted this code, and then destroyed it, for science.</p>
 				<div class="example2-sprite"></div>
 			<p>Sauce: <a href="http://jsfiddle.net/simurai/CGmCe/light/" target="_blank">http://jsfiddle.net/simurai/CGmCe/light/</a></p>
 		</div>
