--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!--  -->
 
 		<div class="book-example3">
-			<h2>example 3</h2>
+			<h2>example 3 is going to remain broken until it stops breaking everything after it</h2>
 			<p>Here's another time sucker upper that I basically copied, studied the code through breaking it and made it sort of my own.  (I promise, ill be creating for myself here shortly.)
 				I discovered some new-to-me translate animations, translate3d(x-axis, y-axis, z-axis) is interesting.  It was used in this animation of Bromswell on the seperate png's of his body.  The head has a slight breathing motion to it as does the body. 
 			</p>
@@ -58,12 +58,12 @@
 		<!--  -->
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
-			<h2>example 1</h2>
-			<p>I'm thinking that this effect could be used to make an aspect of a webpage more exciting.  Like theyre looking for the information that they need, when they hover over the place it should be, the data permanently appears.</p>
+			<h2>example 4</h2>
+			<p>Pretty Ball</p>
 			<div class="example4">
-				Press Me
-			</div>
-			<div class="anything-please"></div>
+				<div class="ball-container">
+			<div class="pretty-ball"></div>
+		</div>
 		</div>
 
 	<!--  -->
