okay, im happy with example 4

--- a/index.html
+++ b/index.html
@@ -58,10 +58,34 @@
 		<!--  -->
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
-			<h2>example 4</h2>
-			<p>Pretty Ball</p>
+			<h2>example 4 - game</h2>
+			<p>Instructions: Change all of the circles into squares by clicking on them. You have 10 seconds after you click your first circle to complete the grid. Good luck!</p>
 			<div class="example4">
 				<div class="ball-container">
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
+			<div class="pretty-ball"></div>
 			<div class="pretty-ball"></div>
 		</div>
 		</div>
