slow moving but im up to 8/30

--- a/index.html
+++ b/index.html
@@ -89,15 +89,74 @@
 			<div class="pretty-ball"></div>
 		</div>
 		</div>
+	</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 5</h2>
+			<p>I tried replicating a "comic book style panes" css example that i found on codepen, but something wasnt working with the code.  I discovered this morning that when i pasted the CSS that governs the entire page BELOW the CSS that governs THIS example box, everything that's broken get's reset.  It works so im going with it... now if i could just find where in my code i went wrong...</p>
+			<div class="example5-wrapper">
+				<div class="example5">
+ 					<div class="example5-text">
+						<!-- <p>"This is the general idea, needs to be more polished though"</p> -->
+ 						<div class="example5-text-inside">Yeah! Finally!</div>
+ 					</div>
+ 				</div>
+  		</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 6</h2>
+			<p>The EW! has a weird *pop* at the end, not sure why.</p>
+				<div class="example6-wrapper">
+					<div class="example6-box">
+						<p class="example6-hello">ew!</p>
+  				</div>
+  			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 7</h2>
+			<p>Just a continuation of example 6.</p>
+			<div class="example7-wrapper">
+				<div class="example7-box"></div>
+				<div class="example7-box"></div>
+				<div class="example7-box"></div>
+				<div class="example7-box"></div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 7</h2>
+			<p>temp</p>
+			<div class="example8-wrapper">
+				<div class="example8-temp"></div>
+			</div>
+		</div>
 
 	<!--  -->
 	<!--  -->
+		</div>
 	</div>
-	</div>
+</div>
 
 </body>
 </html>
-
 
 
 
