making progress, spending too much time on irrelevant details

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<title>Thirty CSS Examples</title>
+
 	<link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:900' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Tinos:400,700' rel='stylesheet' type='text/css'>
+
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="body.css">
 
-	<link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="wrapper">
@@ -143,9 +146,13 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 7</h2>
-			<p>temp</p>
+			<p>Messing around with my new favorite stylization, white on white.</p>
 			<div class="example8-wrapper">
-				<div class="example8-temp"></div>
+					<div class="example8-bg"></div>
+					<div class="example8-core"></div>
+					<p class="example8-name">The Iron Yard</p>
+					<div class="example8-overlay"></div>
+			</div>
 			</div>
 		</div>
 
