starting to drown, need to simplify

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <!--  -->
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
-			<h2>example 7</h2>
+			<h2>example 8</h2>
 			<p>Messing around with my new favorite stylization, white on white.</p>
 			<div class="example8-wrapper">
 					<div class="example8-bg"></div>
@@ -153,12 +153,26 @@
 					<p class="example8-name">The Iron Yard</p>
 					<div class="example8-overlay"></div>
 			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 9</h2>
+			<p>A continuation of Example 8.  Took a while to get this guy to stay put once the animation was finished.  Truthfully up until this point i did not understand keyframing or animations, still dont completely know how to apply the shorthand.  But i got it to work, and i have an understanding of what's going on with animations.</p>
+			<div class="example9-wrapper">
+					<div class="example9-bg"></div>
+					<div class="example9-core"></div>
+					<p class="example9-name">mathematical</p>
+					<div class="example9-overlay"></div>
 			</div>
 		</div>
 
+
 	<!--  -->
 	<!--  -->
-		</div>
 	</div>
 </div>
 
