getting there, all the way to example 14 wow (exclamation mark)

--- a/index.html
+++ b/index.html
@@ -170,6 +170,83 @@
 			</div>
 		</div>
 
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 10</h2>
+			<p>Based on some code that Joshua Smith had written and was being looked at by Joshua Date over hipchat.  Through listening in on that chat, i learned that two you cant have two different types of transforms going on in the same keyframe.  You have to apply the different transforms to different classes... i think im getting that correct...</p>
+			<div class="example10-wrapper">
+				<div class="example10-bg">
+					<div class="example10-move">
+						<div class="example10-content"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 11</h2>
+			<p>Basically the same as Example 10, but with some movement because i have not translated anything yet, at least not while understanding how.</p>
+			<div class="example11-wrapper">
+				<div class="example11-bg">
+					<div class="example11-move">
+						<div class="example11-content"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 12</h2>
+			<p>I dont get it.  This is based off of a codepen example of a flipping disk with two sides.  Someone pointed out on hipchat that its written sassy, so who knows what i'm missing in this.  I left it as is because its as close to two sides as i could get it.<br>Sauce: <a href="http://codepen.io/calacitizen/pen/DoJqk">http://codepen.io/calacitizen/pen/DoJqk</a></p>
+			<div class="example12-wrapper">
+				<div class="example12-bg">
+
+					<div class="example12-container">i dont
+						<div class="example12-content content1">get it</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 13</h2>
+			<p>This one is pretty interesting.  Taken primarily from codepen & rewritten, it uses an animation on the background called "pulse".  It begins at scale(0);opacity:1;, so its visible completely underneath the static forground (at z-index:10;) then transforms to it's native size and to opacity:0;.  I would not have put that technique together on my own but sweet, ill use it.  I also made it fade faster.<br>Sauce: <a href="http://codepen.io/KoniG87/pen/gktdi">http://codepen.io/KoniG87/pen/gktdi</a></p>
+			<div class="example13-wrapper">
+				<div class="example13-insidewrapper">
+					<div class="example13-marker">
+						<div class="example13-dot"></div>
+						<div class="example13-pulse"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 14</h2>
+			<p>basic form</p>
+			<div class="example13-wrapper">
+					<div class="example13-form"></div>
+			</div>
+		</div>
 
 	<!--  -->
 	<!--  -->
