wow, halfway done

--- a/index.html
+++ b/index.html
@@ -242,11 +242,58 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 14</h2>
-			<p>basic form</p>
-			<div class="example13-wrapper">
-					<div class="example13-form"></div>
+			<p>Basic Form<br>Sauce: <a href="http://purecss.io/forms/">http://purecss.io/forms/</a> just for some basic guidance, because i think Pure is a preset collection of rules.</p>
+			<div class="example14-wrapper">
+				<form class="example14-form">
+					<fieldset>
+						<div class="form1">
+						<input type="email" placeholder="WHO ARE YOU">
+						</div>
+						<div class="form1">
+						<input type="email" placeholder="ARE YOU PEOPLE?">
+						</div>
+						<div class="form1">
+						<label for="remember">
+						<input id="remember" type="checkbox"> Check it or dont...
+    				</label>
+    				</div>
+    				<div class="form1">
+		        <button type="submit" class="pure-button pure-button-primary">PROVE IT</button>
+		     	 	</div>
+    			</fieldset>
+				</form>
 			</div>
 		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 15</h2>
+			<p>This one is kind of dumb.  I know now how the position relative parent likes to slap their children into being absolute with their decisions.</p>
+			<div class="example15-wrapper">
+				<ul class="example15-main">
+					<li class="example15-slide">WHOA GET ME OUTTA THIS BOX</li>
+				</ul>
+			</div>
+		</div>
+
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 16</h2>
+			<p>This one is kind of dumb.  I know now how the position relative parent likes to slap their children into being absolute with their decisions.<br>Simi-Sauce: <a href="http://codepen.io/lizardking93/pen/czBJn">http://codepen.io/lizardking93/pen/czBJn</a></p>
+			<div class="example15-wrapper">
+				<ul class="example15-main">
+					<li class="example15-slide">WHOA GET ME OUTTA THIS BOX</li>
+				</ul>
+			</div>
+		</div>
+
 
 	<!--  -->
 	<!--  -->
