i've learned so much and am still so far behind. home stretch

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 15</h2>
-			<p>This one is kind of dumb.  I know now how the position relative parent likes to slap their children into being absolute with their decisions.</p>
+			<p>This one is kind of dumb.  I know now how the position relative parent likes to slap their children into being absolute with their decisions.<br>Simi-Sauce: <a href="http://codepen.io/lizardking93/pen/czBJn">http://codepen.io/lizardking93/pen/czBJn</a></p>
 			<div class="example15-wrapper">
 				<ul class="example15-main">
 					<li class="example15-slide">WHOA GET ME OUTTA THIS BOX</li>
@@ -286,11 +286,61 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 16</h2>
-			<p>This one is kind of dumb.  I know now how the position relative parent likes to slap their children into being absolute with their decisions.<br>Simi-Sauce: <a href="http://codepen.io/lizardking93/pen/czBJn">http://codepen.io/lizardking93/pen/czBJn</a></p>
-			<div class="example15-wrapper">
-				<ul class="example15-main">
-					<li class="example15-slide">WHOA GET ME OUTTA THIS BOX</li>
-				</ul>
+			<p>Lookin good. I want to put two more flashing squares inside of this main square, begining their flash pattern at a slightly later delay than it's parent.  Similar to the source.<br> Sauce: <a href="http://codepen.io/ScottMarshall/pen/EjCIH">http://codepen.io/ScottMarshall/pen/EjCIH</a></p>
+			<div class="example16-wrapper">
+				<div class="example16-loader">
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 17</h2>
+			<p>I attempted a really beautiful drop-shadow, Example 2 of the sauce, but i just couldnt make it happen.  I did get one corner of the page to pop off the screen. <br>Sauce: <a href="http://codepen.io/haibnu/pen/FxGsI">http://codepen.io/haibnu/pen/FxGsI</a></p>
+			<div class="example17-wrapper">
+				<div class="example17-bg">
+					<div class="example17-page">
+					<div class="effect2"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 18</h2>
+			<p>I <u>love</u> high key elements, hidden in the background.</p>
+			<div class="example18-wrapper">
+				<div class="example18-bg">
+					<div class="example18-effect1"></div>
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 19</h2>
+			<p>Adapted from @date's IOS Slider check box, its just a radio button.  Today i learned that i do not understand how to style elements like this.</p>
+			<div class="example19-wrapper">
+				<div class="example19-bg">
+					
+					<div class="roundedOne">
+      			<input id="roundedOne" type="checkbox" name="check" checked />
+      			<label for="roundedOne">
+      			<span>On</span>
+      			</label>
+    			
+    			</div>
+				</div>
 			</div>
 		</div>
 
