--- a/index.html
+++ b/index.html
@@ -344,6 +344,164 @@
 			</div>
 		</div>
 
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 20</h2>
+			<p>Continuation of example 18.  I really like subtle stylization like this.</p>
+			<div class="example20-wrapper">
+				<div class="example20-bg">
+					<div class="example20-paper"></div>
+    			</div>
+				</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 21</h2>
+			<p>That's pretty cool.  It is pretty much just like it's source, but i did go through and write it.  The scale transformation goes from flat to vertically compressed, spending most of its time on the screen skinny, and in true animated form, reaches the top of it's cycle and shoots back down to the shadow.  Very cool, although i'm not entirely positive on percentages and how to REALLY use them as of yet. <br>Sauce: <a href="http://codepen.io/joshbader/pen/mpFir">http://codepen.io/joshbader/pen/mpFir</a></p>
+			<div class="example21-wrapper">
+				<div class="example21-bg">
+					<div class="example21-paper">
+						<div class="example21-bounce"></div>
+					</div>
+  			</div>
+			</div>
+		</div>	
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 22</h2>
+			<p>Just a reflection.  Inspiration sauce: <a href="http://codepen.io/maskedcoder/pen/GuDBw">http://codepen.io/maskedcoder/pen/GuDBw</a></p>
+			<div class="example22-wrapper">
+				<div class="example22-bg">
+					<h1 class="example22-reflect">THE IRON YARD</h1>
+					<h1 class="example22-reflect2">THE IRON YARD</h1>
+  			</div>
+			</div>
+		</div>	
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 23</h2>
+			<p>i cant get it to work, the letters are supposed to individually flip around on hover</p>
+			<div class="example23-wrapper">
+				<div class="example23-bg">
+					<h1 class="example23-spin">
+						<span class="spin">H</span>
+						<span class="spin">3</span>
+						<span class="spin">1</span>
+						<span class="spin">1</span>
+						<span class="spin">O</span>
+					</h1>
+  			</div>
+			</div>
+		</div>	
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 24</h2>
+			<p>playing with stepping sprite animations</p>
+			<div class="example24-wrapper">
+				<div class="example24-bg">
+					<div class="example24-sprite"></div>
+  			</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 25</h2>
+			<p>inset border</p>
+			<div class="example25-wrapper">
+				<div class="example25-bg">
+  			</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 26</h2>
+			<p>rotate</p>
+			<div class="example26-wrapper">
+				<div class="example26-bg">
+  			</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 27</h2>
+			<p>scale</p>
+			<div class="example27-wrapper">
+				<div class="example27-bg">
+  			</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 28</h2>
+			<p>spin</p>
+			<div class="example28-wrapper">
+				<div class="example28-bg">
+  			</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 29</h2>
+			<p>translate</p>
+			<div class="example29-wrapper">
+				<div class="example29-bg">
+  			</div>
+			</div>
+		</div>
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+		<div class="book"> <!-- <div class="overlay"></div> -->
+			<h2>example 30</h2>
+			<p>dissapear</p>
+			<div class="example30-wrapper">
+				<div class="example30-bg">
+					<div class="inside30"></div>
+  			</div>
+			</div>
+		</div>
 
 	<!--  -->
 	<!--  -->
@@ -352,6 +510,7 @@
 
 </body>
 </html>
+
 
 
 
