fixed some margin stuff

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	<div class="container">
 		<h1>HELLO!!!</h1>
 
-		<!--  -->
-		<!--  -->
-		<!--  -->
+		<!--///////////////////////////////
+		////////////////I REALLY LIKE THIS
+		////////////////////////////////-->
+	
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 1</h2>
 			<p>This was the example we went over in class.  It is my first example.</p>
