--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- =================== -->
+<!-- THIRTY CSS EXAMPLES -->
+<!-- =================== -->
+
 <!doctype html>
 <html>
 <head>
@@ -36,7 +40,7 @@
 			<h2>example 2</h2>
 			<p>I did this to help me understand whats going on with keyframe animations.  This image is 2000px wide and has ten different "frames" of the animation repeated all the way across.  The code takes ten "steps" down the image, doing the math for me, literally shifting the image position in the background.  So, "play .8s steps(10) infinite"... if you were to change the number of steps to "steps(11)" (like is shown in the animation below) then the animation would change.  There are only ten frames on a fixed dimension image, so telling the computer that there are 11 frams then divides the pasted code into eleven parts and essentially renders the animation worthless.  I copy and pasted this code, and then destroyed it, for science.</p>
 				<div class="example2-sprite"></div>
-			<p>Sauce: <a href="http://jsfiddle.net/simurai/CGmCe/light/" target="_blank">http://jsfiddle.net/simurai/CGmCe/light/</a></p>
+			<p>Source: <a href="http://jsfiddle.net/simurai/CGmCe/light/" target="_blank">http://jsfiddle.net/simurai/CGmCe/light/</a></p>
 		</div>
 
 
@@ -54,7 +58,7 @@
 				<img class="example3-body" src="img/example3-body.png"></img>
 				<img class="example3-head" src="img/example3-head.png"></img>
 			</div>
-				<p>Sauce: <a href="http://samuli.hakoniemi.net/having-fun-with-css-keyframes/">http://samuli.hakoniemi.net/having-fun-with-css-keyframes/</a> </p>
+				<p>Source: <a href="http://samuli.hakoniemi.net/having-fun-with-css-keyframes/">http://samuli.hakoniemi.net/having-fun-with-css-keyframes/</a> </p>
 		</div>
 
 		<!--  -->
@@ -106,7 +110,7 @@
 				<div class="example5">
  					<div class="example5-text">
 						<!-- <p>"This is the general idea, needs to be more polished though"</p> -->
- 						<div class="example5-text-inside">Yeah! Finally!</div>
+ 						<div class="example5-text-inside">Beautiful Box</div>
  					</div>
  				</div>
   		</div>
@@ -118,10 +122,10 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 6</h2>
-			<p>The EW! has a weird *pop* at the end, not sure why.</p>
+			<p>Spins around and displays text at the end of the animation.</p>
 				<div class="example6-wrapper">
 					<div class="example6-box">
-						<p class="example6-hello">ew!</p>
+						<p class="example6-hello">WOW</p>
   				</div>
   			</div>
 		</div>
@@ -132,7 +136,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 7</h2>
-			<p>Just a continuation of example 6.</p>
+			<p>A continuation of example 6. Click and hold.</p>
 			<div class="example7-wrapper">
 				<div class="example7-box"></div>
 				<div class="example7-box"></div>
@@ -147,7 +151,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 8</h2>
-			<p>Messing around with my new favorite stylization, white on white.</p>
+			<p>Playing around with my new favorite stylization, white on white.</p>
 			<div class="example8-wrapper">
 					<div class="example8-bg"></div>
 					<div class="example8-core"></div>
@@ -162,7 +166,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 9</h2>
-			<p>A continuation of Example 8.  Took a while to get this guy to stay put once the animation was finished.  Truthfully up until this point i did not understand keyframing or animations, still dont completely know how to apply the shorthand.  But i got it to work, and i have an understanding of what's going on with animations.</p>
+			<p>A continuation of Example 8.  Took a while to get this guy to stay put once the animation was finished.</p>
 			<div class="example9-wrapper">
 					<div class="example9-bg"></div>
 					<div class="example9-core"></div>
@@ -177,7 +181,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 10</h2>
-			<p>Based on some code that Joshua Smith had written and was being looked at by Joshua Date over hipchat.  Through listening in on that chat, i learned that two you cant have two different types of transforms going on in the same keyframe.  You have to apply the different transforms to different classes... i think im getting that correct...</p>
+			<p>You cant have two different types of transforms going on in the same keyframe.  The work around is to apply the different transforms to different classes... i think im getting that correct...</p>
 			<div class="example10-wrapper">
 				<div class="example10-bg">
 					<div class="example10-move">
@@ -193,7 +197,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 11</h2>
-			<p>Basically the same as Example 10, but with some movement because i have not translated anything yet, at least not while understanding how.</p>
+			<p>Basically the same as Example 10, but with some movement.</p>
 			<div class="example11-wrapper">
 				<div class="example11-bg">
 					<div class="example11-move">
@@ -209,7 +213,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 12</h2>
-			<p>I dont get it.  This is based off of a codepen example of a flipping disk with two sides.  Someone pointed out on hipchat that its written sassy, so who knows what i'm missing in this.  I left it as is because its as close to two sides as i could get it.<br>Sauce: <a href="http://codepen.io/calacitizen/pen/DoJqk">http://codepen.io/calacitizen/pen/DoJqk</a></p>
+			<p>I dont get it.  This is based off of a codepen example of a flipping disk with two sides. I left it as is because its as close to two sides as I could get it.<br>Source: <a href="http://codepen.io/calacitizen/pen/DoJqk">http://codepen.io/calacitizen/pen/DoJqk</a></p>
 			<div class="example12-wrapper">
 				<div class="example12-bg">
 
@@ -226,7 +230,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 13</h2>
-			<p>This one is pretty interesting.  Taken primarily from codepen & rewritten, it uses an animation on the background called "pulse".  It begins at scale(0);opacity:1;, so its visible completely underneath the static forground (at z-index:10;) then transforms to it's native size and to opacity:0;.  I would not have put that technique together on my own but sweet, ill use it.  I also made it fade faster.<br>Sauce: <a href="http://codepen.io/KoniG87/pen/gktdi">http://codepen.io/KoniG87/pen/gktdi</a></p>
+			<p>This is pretty interesting.  Taken primarily from codepen & rewritten, it uses an animation on the background called "pulse".  It begins at scale(0);opacity:1;, so its visible completely underneath the static forground (at z-index:10;) then transforms to it's native size and to opacity:0;.  Very cool.<br>Source: <a href="http://codepen.io/KoniG87/pen/gktdi">http://codepen.io/KoniG87/pen/gktdi</a></p>
 			<div class="example13-wrapper">
 				<div class="example13-insidewrapper">
 					<div class="example13-marker">
@@ -243,7 +247,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 14</h2>
-			<p>Basic Form<br>Sauce: <a href="http://purecss.io/forms/">http://purecss.io/forms/</a> just for some basic guidance, because i think Pure is a preset collection of rules.</p>
+			<p>Basic Form<br>Source: <a href="http://purecss.io/forms/">http://purecss.io/forms/</a> just for some basic guidance, because i think Pure is a preset collection of rules.</p>
 			<div class="example14-wrapper">
 				<form class="example14-form">
 					<fieldset>
@@ -272,7 +276,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 15</h2>
-			<p>This one is kind of dumb.  I know now how the position relative parent likes to slap their children into being absolute with their decisions.<br>Simi-Sauce: <a href="http://codepen.io/lizardking93/pen/czBJn">http://codepen.io/lizardking93/pen/czBJn</a></p>
+			<p>This one is fun.  A position relative parent will work best if their child elements are position absolute.<br>Simi-Source: <a href="http://codepen.io/lizardking93/pen/czBJn">http://codepen.io/lizardking93/pen/czBJn</a></p>
 			<div class="example15-wrapper">
 				<ul class="example15-main">
 					<li class="example15-slide">WHOA GET ME OUTTA THIS BOX</li>
@@ -287,10 +291,13 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 16</h2>
-			<p>Lookin good. I want to put two more flashing squares inside of this main square, begining their flash pattern at a slightly later delay than it's parent.  Similar to the source.<br> Sauce: <a href="http://codepen.io/ScottMarshall/pen/EjCIH">http://codepen.io/ScottMarshall/pen/EjCIH</a></p>
+			<p>Lookin good. I love this. They begin their flash pattern at a slightly later delay than it's parent.  Similar to: <br> Source: <a href="http://codepen.io/ScottMarshall/pen/EjCIH">http://codepen.io/ScottMarshall/pen/EjCIH</a></p>
 			<div class="example16-wrapper">
-				<div class="example16-loader">
-				</div>
+				<div class="example16-loader-1"></div>
+				<div class="example16-loader-2"></div>
+				<div class="example16-loader-3"></div>
+				<div class="example16-loader-4"></div>
+				<div class="example16-loader-5"></div>
 			</div>
 		</div>
 
@@ -300,7 +307,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 17</h2>
-			<p>I attempted a really beautiful drop-shadow, Example 2 of the sauce, but i just couldnt make it happen.  I did get one corner of the page to pop off the screen. <br>Sauce: <a href="http://codepen.io/haibnu/pen/FxGsI">http://codepen.io/haibnu/pen/FxGsI</a></p>
+			<p>I attempted a really beautiful drop-shadow, Example 2 of the Source, but i just couldnt make it happen.  I did get one corner of the page to pop off the screen. <br>Source: <a href="http://codepen.io/haibnu/pen/FxGsI">http://codepen.io/haibnu/pen/FxGsI</a></p>
 			<div class="example17-wrapper">
 				<div class="example17-bg">
 					<div class="example17-page">
@@ -330,7 +337,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 19</h2>
-			<p>Adapted from @date's IOS Slider check box, its just a radio button.  Today i learned that i do not understand how to style elements like this.</p>
+			<p>Adapted from an IOS Slider check box, its just a radio button.</p>
 			<div class="example19-wrapper">
 				<div class="example19-bg">
 					
@@ -366,7 +373,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 21</h2>
-			<p>That's pretty cool.  It is pretty much just like it's source, but i did go through and write it.  The scale transformation goes from flat to vertically compressed, spending most of its time on the screen skinny, and in true animated form, reaches the top of it's cycle and shoots back down to the shadow.  Very cool, although i'm not entirely positive on percentages and how to REALLY use them as of yet. <br>Sauce: <a href="http://codepen.io/joshbader/pen/mpFir">http://codepen.io/joshbader/pen/mpFir</a></p>
+			<p>That's pretty cool.  It is practically identical to it's source, but i did go through and write it.  The scale transformation goes from flat to vertically compressed, spending most of its time on the screen skinny, and in true animated form, reaches the top of it's cycle and shoots back down to the shadow.  Very cool. <br>Source: <a href="http://codepen.io/joshbader/pen/mpFir">http://codepen.io/joshbader/pen/mpFir</a></p>
 			<div class="example21-wrapper">
 				<div class="example21-bg">
 					<div class="example21-paper">
@@ -382,11 +389,11 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 22</h2>
-			<p>Just a reflection.  Inspiration sauce: <a href="http://codepen.io/maskedcoder/pen/GuDBw">http://codepen.io/maskedcoder/pen/GuDBw</a></p>
+			<p>Just a reflection.  Inspiration Source: <a href="http://codepen.io/maskedcoder/pen/GuDBw">http://codepen.io/maskedcoder/pen/GuDBw</a></p>
 			<div class="example22-wrapper">
 				<div class="example22-bg">
-					<h1 class="example22-reflect">THE IRON YARD</h1>
-					<h1 class="example22-reflect2">THE IRON YARD</h1>
+					<h1 class="example22-reflect">KEVINBOST.COM</h1>
+					<h1 class="example22-reflect2">KEVINBOST.COM</h1>
   			</div>
 			</div>
 		</div>	
@@ -397,7 +404,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 23</h2>
-			<p>i cant get it to work, the letters are supposed to individually flip around on hover</p>
+			<p></p>
 			<div class="example23-wrapper">
 				<div class="example23-bg">
 					<h1 class="example23-spin">
@@ -431,7 +438,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 25</h2>
-			<p>inset border</p>
+			<p>inset border (hover)</p>
 			<div class="example25-wrapper">
 				<div class="example25-bg">
   			</div>
@@ -444,7 +451,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 26</h2>
-			<p>rotate</p>
+			<p>rotate (hover)</p>
 			<div class="example26-wrapper">
 				<div class="example26-bg">
   			</div>
@@ -457,7 +464,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 27</h2>
-			<p>scale</p>
+			<p>scale (hover)</p>
 			<div class="example27-wrapper">
 				<div class="example27-bg">
   			</div>
@@ -470,7 +477,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 28</h2>
-			<p>spin</p>
+			<p>spin (hover)</p>
 			<div class="example28-wrapper">
 				<div class="example28-bg">
   			</div>
@@ -483,7 +490,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 29</h2>
-			<p>translate</p>
+			<p>translate (hover)</p>
 			<div class="example29-wrapper">
 				<div class="example29-bg">
   			</div>
@@ -496,7 +503,7 @@
 
 		<div class="book"> <!-- <div class="overlay"></div> -->
 			<h2>example 30</h2>
-			<p>dissapear</p>
+			<p>dissapear (hover)</p>
 			<div class="example30-wrapper">
 				<div class="example30-bg">
 					<div class="inside30"></div>
